--- a/views/center/apa/pdf.ejs
+++ b/views/center/apa/pdf.ejs
@@ -37,103 +37,134 @@
     .inline-block-child {
       display: inline-block;
     }
+
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
+    .row {
+      display: flex;
+      width: 100%;
+    }
+
+    .row>* {
+      width: 50%;
+    }
   </style>
 </head>
 
 <body>
-
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-      <h1>এপিএ</h1>
-      <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
-      <%if (records.length >0){ %>
-      <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>কৌশলগত উদ্দেশ্য</th>
-            <th>কৌশলগত উদ্দেশ্যের মান</th>
-            <th>কার্যক্রম</th>
-            <th>কর্মসম্পাদন সূচক</th>
-            <th>একক</th>
-            <th>গণনা পদ্ধতি</th>
-            <th>কর্মসম্পাদন সূচক এর মান</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (উত্তম ৮০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মান ৭০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মানের নিম্নে ৬০%)</th>
-            <th>প্রথম ত্রৈমাসিক অর্জন</th>
-            <th>দ্বিতীয় ত্রৈমাসিক অর্জন</th>
-            <th>তৃতীয় ত্রৈমাসিক অর্জন</th>
-            <th>চতুর্থ ত্রৈমাসিক অর্জন</th>
-            <th>মোট</th>
-            <th>শতকরা হার</th>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
+      <div>
+        <h1>এপিএ</h1>
+        <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
+        <%if (records.length >0){ %>
+        <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th>কৌশলগত উদ্দেশ্য</th>
+              <th>কৌশলগত উদ্দেশ্যের মান</th>
+              <th>কার্যক্রম</th>
+              <th>কর্মসম্পাদন সূচক</th>
+              <th>একক</th>
+              <th>গণনা পদ্ধতি</th>
+              <th>কর্মসম্পাদন সূচক এর মান</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (উত্তম ৮০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মান ৭০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মানের নিম্নে ৬০%)</th>
+              <th>প্রথম ত্রৈমাসিক অর্জন</th>
+              <th>দ্বিতীয় ত্রৈমাসিক অর্জন</th>
+              <th>তৃতীয় ত্রৈমাসিক অর্জন</th>
+              <th>চতুর্থ ত্রৈমাসিক অর্জন</th>
+              <th>মোট</th>
+              <th>শতকরা হার</th>
 
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row){ %>
-          <tr>
-            <td><%= row.uddessho %></td>
-            <td><%= row.maan %></td>
-            <td><%= row.work %></td>
-            <td><%= row.shuchok %></td>
-            <td><%= row.ekok %></td>
-            <td><%= row.gonona %></td>
-            <td><%= row.shuchokMaan %></td>
-            <td><%= new Number(row.best).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.otiUttam).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.uttam).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.cholti).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.below).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.firstThree).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.secondThree).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.thirdThree).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.fourthThree).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.total).toLocaleString("bn-BD") %></td>
-            <td><%= new Number(row.percentage).toLocaleString("bn-BD") %></td>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td><%= row.uddessho %></td>
+              <td><%= row.maan %></td>
+              <td><%= row.work %></td>
+              <td><%= row.shuchok %></td>
+              <td><%= row.ekok %></td>
+              <td><%= row.gonona %></td>
+              <td><%= row.shuchokMaan %></td>
+              <td><%= new Number(row.best).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.otiUttam).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.uttam).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.cholti).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.below).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.firstThree).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.secondThree).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.thirdThree).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.fourthThree).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.total).toLocaleString("bn-BD") %></td>
+              <td><%= new Number(row.percentage).toLocaleString("bn-BD") %></td>
 
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% }else{ %>
-      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>কৌশলগত উদ্দেশ্য</th>
-            <th>কৌশলগত উদ্দেশ্যের মান</th>
-            <th>কার্যক্রম</th>
-            <th>কর্মসম্পাদন সূচক</th>
-            <th>একক</th>
-            <th>গণনা পদ্ধতি</th>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% }else{ %>
+        <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th>কৌশলগত উদ্দেশ্য</th>
+              <th>কৌশলগত উদ্দেশ্যের মান</th>
+              <th>কার্যক্রম</th>
+              <th>কর্মসম্পাদন সূচক</th>
+              <th>একক</th>
+              <th>গণনা পদ্ধতি</th>
 
-            <th>কর্মসম্পাদন সূচক এর মান</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (উত্তম ৮০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মান ৭০%)</th>
-            <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মানের নিম্নে ৬০%)</th>
-            <th>প্রথম ত্রৈমাসিক অর্জন</th>
-            <th>দ্বিতীয় ত্রৈমাসিক অর্জন</th>
-            <th>তৃতীয় ত্রৈমাসিক অর্জন</th>
-            <th>চতুর্থ ত্রৈমাসিক অর্জন</th>
-            <th>মোট</th>
-            <th>শতকরা হার</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row){ %>
-          <tr>
-            <td colspan="10">No data Found</td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% } %>
+              <th>কর্মসম্পাদন সূচক এর মান</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অসাধারণ ১০০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (অতি উত্তম ৯০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (উত্তম ৮০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মান ৭০%)</th>
+              <th>লক্ষ্যমাত্রা/নির্ণায়ক (চলতি অর্থবছর) (চলতি মানের নিম্নে ৬০%)</th>
+              <th>প্রথম ত্রৈমাসিক অর্জন</th>
+              <th>দ্বিতীয় ত্রৈমাসিক অর্জন</th>
+              <th>তৃতীয় ত্রৈমাসিক অর্জন</th>
+              <th>চতুর্থ ত্রৈমাসিক অর্জন</th>
+              <th>মোট</th>
+              <th>শতকরা হার</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td colspan="10">No data Found</td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% } %>
+      </div>
     </div>
   </div>
-
 </body>
 
 </html>
