--- a/views/center/rajossho/pdf.ejs
+++ b/views/center/rajossho/pdf.ejs
@@ -37,94 +37,125 @@
     .inline-block-child {
       display: inline-block;
     }
+
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
+    .row {
+      display: flex;
+      width: 100%;
+    }
+
+    .row>* {
+      width: 50%;
+    }
   </style>
 </head>
 
 <body>
-
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-      <h1>মাসিক রাজস্ব অর্থ প্রাপ্তির হিসাব</h1>
-      <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
-      <%if (records.length >0){ %>
-      <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>অর্থনৈতিক কোড নং</th>
-            <th>উপ-খাতের নাম</th>
-            <th>জুলাই</th>
-            <th>আগস্ট</th>
-            <th>সেপ্টে</th>
-            <th>অক্টো</th>
-            <th>নভে</th>
-            <th>ডিসে</th>
-            <th>জানু</th>
-            <th>ফেব্রু</th>
-            <th>মার্চ</th>
-            <th>এপ্রিল</th>
-            <th>মে</th>
-            <th>জুন</th>
-            <th>সর্বমোট</th>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
+      <div>
+        <h1>মাসিক রাজস্ব অর্থ প্রাপ্তির হিসাব</h1>
+        <p><b>সেন্টারের নাম :</b><%= centerName.center %></p>
+        <%if (records.length >0){ %>
+        <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th>অর্থনৈতিক কোড নং</th>
+              <th>উপ-খাতের নাম</th>
+              <th>জুলাই</th>
+              <th>আগস্ট</th>
+              <th>সেপ্টে</th>
+              <th>অক্টো</th>
+              <th>নভে</th>
+              <th>ডিসে</th>
+              <th>জানু</th>
+              <th>ফেব্রু</th>
+              <th>মার্চ</th>
+              <th>এপ্রিল</th>
+              <th>মে</th>
+              <th>জুন</th>
+              <th>সর্বমোট</th>
 
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row){ %>
-          <tr>
-            <td><%= row.code %></td>
-            <td><%= row.upokhat %></td>
-            <td><%= row.july1 %></td>
-            <td><%= row.august1 %></td>
-            <td><%= row.sept1 %></td>
-            <td><%= row.oct1 %></td>
-            <td><%= row.nov1 %></td>
-            <td><%= row.dec1 %></td>
-            <td><%= row.jan2 %></td>
-            <td><%= row.feb2 %></td>
-            <td><%= row.march2 %></td>
-            <td><%= row.apr2 %></td>
-            <td><%= row.may2 %></td>
-            <td><%= row.june2 %></td>
-            <td><%= row.total %></td>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td><%= row.code %></td>
+              <td><%= row.upokhat %></td>
+              <td><%= row.july1 %></td>
+              <td><%= row.august1 %></td>
+              <td><%= row.sept1 %></td>
+              <td><%= row.oct1 %></td>
+              <td><%= row.nov1 %></td>
+              <td><%= row.dec1 %></td>
+              <td><%= row.jan2 %></td>
+              <td><%= row.feb2 %></td>
+              <td><%= row.march2 %></td>
+              <td><%= row.apr2 %></td>
+              <td><%= row.may2 %></td>
+              <td><%= row.june2 %></td>
+              <td><%= row.total %></td>
 
 
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% }else{ %>
-      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>অর্থনৈতিক কোড নং</th>
-            <th>উপ-খাতের নাম</th>
-            <th>জুলাই</th>
-            <th>আগস্ট</th>
-            <th>সেপ্টে</th>
-            <th>অক্টো</th>
-            <th>নভে</th>
-            <th>ডিসে</th>
-            <th>জানু</th>
-            <th>ফেব্রু</th>
-            <th>মার্চ</th>
-            <th>এপ্রিল</th>
-            <th>মে</th>
-            <th>জুন</th>
-            <th>সর্বমোট</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row){ %>
-          <tr>
-            <td colspan="10">No data Found</td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% } %>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% }else{ %>
+        <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th>অর্থনৈতিক কোড নং</th>
+              <th>উপ-খাতের নাম</th>
+              <th>জুলাই</th>
+              <th>আগস্ট</th>
+              <th>সেপ্টে</th>
+              <th>অক্টো</th>
+              <th>নভে</th>
+              <th>ডিসে</th>
+              <th>জানু</th>
+              <th>ফেব্রু</th>
+              <th>মার্চ</th>
+              <th>এপ্রিল</th>
+              <th>মে</th>
+              <th>জুন</th>
+              <th>সর্বমোট</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td colspan="10">No data Found</td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% } %>
+      </div>
     </div>
   </div>
-
 </body>
 
 </html>
