--- a/views/center/topSheet/bitoron/pdf.ejs
+++ b/views/center/topSheet/bitoron/pdf.ejs
@@ -59,15 +59,16 @@
 </head>
 
 <body>
-
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
       <div class="header">
         <div>
           <img src="/images/dae.jpg" width="100" alt="dae">
         </div>
-        <div>
-          <h3>হর্টিকালচার উইং</h3>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
         </div>
         <div>
           <img src="/images/bd.png" width="100" alt="bd">
@@ -174,7 +175,6 @@
       <% } %>
     </div>
   </div>
-
 </body>
 
 </html>
