--- a/views/pd/charaKolomPrice/charaKolom/pdf.ejs
+++ b/views/pd/charaKolomPrice/charaKolom/pdf.ejs
@@ -1,131 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</title>
 
-    <style>
-      .flex-container {
-        display: flex;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</title>
 
-        justify-content: center;
-      }
-      .table,
-      td,
-      th {
-        border: 1px solid black;
-      }
-      .table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-      .center {
-        text-align: center;
-      }
-      .inline-block-child {
-        display: inline-block;
-      }
-    </style>
-  </head>
-  <body>
-    <div
-      style="
-        margin-top: 5px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        background-color: #ffffffa6;
-      "
-      class="center"
-    >
-      <div>
-        <div
-          style="
+  <style>
+    .flex-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .flex-container h5 {
+      padding: 0;
+      margin: 0;
+    }
+
+    .table,
+    td,
+    th {
+      border: 1px solid black;
+    }
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .inline-block-child {
+      display: inline-block;
+    }
+
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
+    .row {
+      display: flex;
+      width: 100%;
+    }
+
+    .row>* {
+      width: 50%;
+    }
+  </style>
+</head>
+
+<body>
+  <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
+    <div>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
+      <div style="
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
             justify-content: space-between;
-          "
-        >
-          <div
-            style="height: 80px; width: 80px; max-height: 80px; max-width: 80px"
-          >
-            <img
-              src="/landingPage/images/daelogo.png"
-              alt="DAE"
-              style="height: 100%; width: 100%; object-fit: contain"
-            />
-          </div>
-          <div>
-            <h1>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h1>
-            <h2>কৃষি সম্প্রসারণ অধিদপ্তর</h2>
-            <h3>হর্টিকালচার উইং</h3>
-            <h3>খামারবাড়ী, ফার্মগেট, ঢাকা-১২১৫</h3>
-            <h3>www.dae.gov.bd</h3>
-            <h2>হর্টিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h2>
-          </div>
-          <div
-            style="height: 80px; width: 80px; max-height: 80px; max-width: 80px"
-          >
-            <img
-              src="/landingPage/images/mujib.png"
-              alt="Homepage"
-              style="height: 100%; width: 100%; object-fit: contain"
-            />
-          </div>
-        </div>
-        <div
-          style="
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-          "
-        >
-          <p>স্মারক নংঃ</p>
-          <p>তারিখঃ <%= new Date().toLocaleDateString();%></p>
-        </div>
-        <%if (records.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-            <thead>
-            <tr>
-                <th>ক্রমিক নং</th>
-                <th>চারা/কলমের নাম</th>
-                <th>চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-                <th>চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
-            </tr>
-            </thead>
-            <tbody>
-                <% records.forEach(function(row,index){ %>
-                    <tr>
-                        <td><%= index+1 %></td>
-                        <td><%= row.cname %></td>
-                        <td><%= row.cholti %></td>
-                        <td><%= row.parbotto %></td>  
-                    </tr>
-                <% }) %>
-            </tbody>
-        </table>
-        <% }else{ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-                <thead>
-                <tr>
-                    <th>চারা/কলমের নাম</th>
-                <th>চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
-                <th>চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% records.forEach(function(row){ %>
-                    <tr>
-                        <td colspan="10">No data Found</td>
-                    </tr>
-                <% }) %>
-                </tbody>
-            </table>
-        <% } %>
+          ">
+        <p>স্মারক নংঃ</p>
+        <p>তারিখঃ <%= new Date().toLocaleDateString();%></p>
+      </div>
+      <%if (records.length >0){ %>
+      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>ক্রমিক নং</th>
+            <th>চারা/কলমের নাম</th>
+            <th>চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
+            <th>চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% records.forEach(function(row,index){ %>
+          <tr>
+            <td><%= index+1 %></td>
+            <td><%= row.cname %></td>
+            <td><%= row.cholti %></td>
+            <td><%= row.parbotto %></td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% }else{ %>
+      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>চারা/কলমের নাম</th>
+            <th>চলতি অর্থবছরে অনুমোদিত বিক্রয়মূল্য</th>
+            <th>চলতি অর্থবছরে পার্বত্য জেলাসমূহের অনুমোদিত অনুমোদিত বিক্রয়মূল্য</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% records.forEach(function(row){ %>
+          <tr>
+            <td colspan="10">No data Found</td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% } %>
     </div>
-</div>
-
+  </div>
 </body>
+
 </html>
