--- a/views/pd/charaKolomPrice/seasonalFlower/pdfForAllCenter.ejs
+++ b/views/pd/charaKolomPrice/seasonalFlower/pdfForAllCenter.ejs
@@ -37,68 +37,99 @@
     .inline-block-child {
       display: inline-block;
     }
+
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
+    .row {
+      display: flex;
+      width: 100%;
+    }
+
+    .row>* {
+      width: 50%;
+    }
   </style>
 </head>
 
 <body>
-
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
-      <h1>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
-      <p><b>সেন্টারের নাম :</b><%= centerName %></p>
-      <%if (records.length >0){ %>
-      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
-            <th>ক্রমিক নং</th>
-            <th>আইটেমের নাম </th>
-            <th>পরিমাণ</th>
-            <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-            <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-            <th>পরিবর্তন/মুছুন</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row,index){ %>
-          <tr>
-            <td><%= index+1 %></td>
-            <td><%= row.item %></td>
-            <td><%= row.poriman %></td>
-            <td><%= row.polycholti %></td>
-            <td><%= row.bedcholti %></td>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
+      <div>
+        <h1>হরটিকালচার সেন্টারের চারা/কলমের বিক্রয়মূল্য</h1>
+        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
+        <%if (records.length >0){ %>
+        <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
+              <th>ক্রমিক নং</th>
+              <th>আইটেমের নাম </th>
+              <th>পরিমাণ</th>
+              <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+              <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+              <th>পরিবর্তন/মুছুন</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row,index){ %>
+            <tr>
+              <td><%= index+1 %></td>
+              <td><%= row.item %></td>
+              <td><%= row.poriman %></td>
+              <td><%= row.polycholti %></td>
+              <td><%= row.bedcholti %></td>
 
 
 
-            <td><a class="btn btn-primary btn-xs" href="/pd/seasonalFlowerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
-              <a class="btn btn-danger btn-xs" href="/pd/seasonalFlowerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
-            </td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% }else{ %>
-      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-        <thead>
-          <tr>
+              <td><a class="btn btn-primary btn-xs" href="/pd/seasonalFlowerEdit/<%= row.id %>"><i class="fa fa-edit"></i></a>
+                <a class="btn btn-danger btn-xs" href="/pd/seasonalFlowerDelete/<%= row.id %>"><i class="fa fa-trash"></i></a>
+              </td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% }else{ %>
+        <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+          <thead>
+            <tr>
 
-            <th>আইটেমের নাম (জাতওয়ারী)</th>
-            <th>পরিমাণ</th>
-            <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-            <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% records.forEach(function(row){ %>
-          <tr>
-            <td colspan="10">No data Found</td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
-      <% } %>
+              <th>আইটেমের নাম (জাতওয়ারী)</th>
+              <th>পরিমাণ</th>
+              <th>পলিব্যাগ (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+              <th>বেডে (চলতি অর্থবছরে বিক্রয়মূল্য)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% records.forEach(function(row){ %>
+            <tr>
+              <td colspan="10">No data Found</td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+        <% } %>
+      </div>
     </div>
   </div>
-
 </body>
 
 </html>
