--- a/views/pd/employee/chak2/pdfAll.ejs
+++ b/views/pd/employee/chak2/pdfAll.ejs
@@ -1,163 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</title>
 
-    <style>
-      .flex-container {
-        display: flex;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</title>
 
-        justify-content: center;
-      }
-      .table,
-      td,
-      th {
-        border: 1px solid black;
-      }
-      .table {
-        width: 100%;
-        border-collapse: collapse;
-      }
-      .center {
-        text-align: center;
-      }
-      .inline-block-child {
-        display: inline-block;
-      }
-    </style>
-  </head>
-  <body>
-    <div
-      style="
-        margin-top: 5px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        background-color: #ffffffa6;
-      "
-      class="center"
-    >
-      <div>
-        <div
-          style="
+  <style>
+    .flex-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .flex-container h5 {
+      padding: 0;
+      margin: 0;
+    }
+
+    .table,
+    td,
+    th {
+      border: 1px solid black;
+    }
+
+    .table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .inline-block-child {
+      display: inline-block;
+    }
+
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
+    .row {
+      display: flex;
+      width: 100%;
+    }
+
+    .row>* {
+      width: 50%;
+    }
+  </style>
+</head>
+
+<body>
+  <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
+    <div>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
+      <div style="
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
             justify-content: space-between;
-          "
-        >
-          <div
-            style="height: 80px; width: 80px; max-height: 80px; max-width: 80px"
-          >
-            <img
-              src="/landingPage/images/daelogo.png"
-              alt="DAE"
-              style="height: 100%; width: 100%; object-fit: contain"
-            />
-          </div>
-          <div>
-            <h1>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h1>
-            <h2>কৃষি সম্প্রসারণ অধিদপ্তর</h2>
-            <h3>হর্টিকালচার উইং</h3>
-            <h3>খামারবাড়ী, ফার্মগেট, ঢাকা-১২১৫</h3>
-            <h3>www.dae.gov.bd</h3>
-            <h2>হর্টিকালচার সেন্টারের কর্মকতা/কর্মচারীদের মঞ্জুরীকৃত পদ ও শুণ্য পদের সংখ্যা</h2>
-          </div>
-          <div
-            style="height: 80px; width: 80px; max-height: 80px; max-width: 80px"
-          >
-            <img
-              src="/landingPage/images/mujib.png"
-              alt="Homepage"
-              style="height: 100%; width: 100%; object-fit: contain"
-            />
-          </div>
-        </div>
-        <div
-          style="
-            display: flex;
-            flex-direction: row;
-            flex-wrap: nowrap;
-            justify-content: space-between;
-          "
-        >
-          <p>স্মারক নংঃ</p>
-          <p>তারিখঃ <%= new Date().toLocaleDateString();%></p>
-        </div>
-        <%if (podobiLists.length >0){ %>
-            <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
-            <thead>
-            <tr>
-                <th>ক্রমিক নং</th>
-                <th>পদের নাম</th>
-                <th>গ্রেড</th>
-                <th>মঞ্জুরীকৃত পদ</th>
-                <th>কর্মরত</th>
-                <th>শুন্যপদ</th>
-            </tr>
-            </thead>
-            <tbody>
-                <% var subpod=0 %> 
-                <% var subworking=0 %> 
-                <% var subshunno=0 %> 
-                <% podobiLists.forEach(function(podobiList,index){ %>
-                    <tr>
-                        <td><%=index+1%></td>
-                        <td><%=podobiList.podobi %></td>
-                        <td><%=podobiList.grade %></td>
-                        <% var pod=0;%>
-                        <% var working=0;%>
-                        <% var shunno=0;%>
-                       <% chak2s.forEach(function(row){ %>
-                            <% if (podobiList.grade === row.grade){%>
-                                    <%  pod+=Number(row.pod) %>
-                                    <%  working+=Number(row.working) %>
-                                <%shunno = pod-working;%>
-                            <%}}) %>
-        
-                        <td><%= pod %></td>
-                        <% subpod+=pod %> 
-                        <td><%= working %></td>
-                        <% subworking+=working %> 
-                        <td><%= shunno %></td>
-                        <% subshunno+=shunno %> 
-                    </tr> 
-                <% }) %>
-                <tr>
-                    <td colspan="3">মোটঃ সকল সেন্টারের তথ্য</td>
-                    <td><%= subpod %></td>
-                    <td><%= subworking %></td>
-                    <td><%= subshunno %></td>
-        
-        
-                </tr>
-                    
-            </tbody>
-        </table>
-        <% }else{ %>
-            <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
-                <thead>
-                <tr>
-                    <th>পদের নাম</th>
-                <th>গ্রেড</th>
-                <th>মঞ্জুরীকৃত পদ</th>
-                <th>কর্মরত</th>
-                <th>শুন্যপদ</th>
-        
-                </tr>
-                </thead>
-                <tbody>
-                <% podobiLists.forEach(function(row){ %>
-                    <tr>
-                        <td colspan="10">No data Found</td>
-                    </tr>
-                <% }) %>
-                </tbody>
-            </table>
-        <% } %>
+          ">
+        <p>স্মারক নংঃ</p>
+        <p>তারিখঃ <%= new Date().toLocaleDateString();%></p>
+      </div>
+      <%if (podobiLists.length >0){ %>
+      <table class="table table-bordered table-striped" id="tblexportData" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>ক্রমিক নং</th>
+            <th>পদের নাম</th>
+            <th>গ্রেড</th>
+            <th>মঞ্জুরীকৃত পদ</th>
+            <th>কর্মরত</th>
+            <th>শুন্যপদ</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% var subpod=0 %>
+          <% var subworking=0 %>
+          <% var subshunno=0 %>
+          <% podobiLists.forEach(function(podobiList,index){ %>
+          <tr>
+            <td><%=index+1%></td>
+            <td><%=podobiList.podobi %></td>
+            <td><%=podobiList.grade %></td>
+            <% var pod=0;%>
+            <% var working=0;%>
+            <% var shunno=0;%>
+            <% chak2s.forEach(function(row){ %>
+            <% if (podobiList.grade === row.grade){%>
+            <%  pod+=Number(row.pod) %>
+            <%  working+=Number(row.working) %>
+            <%shunno = pod-working;%>
+            <%}}) %>
+
+            <td><%= pod %></td>
+            <% subpod+=pod %>
+            <td><%= working %></td>
+            <% subworking+=working %>
+            <td><%= shunno %></td>
+            <% subshunno+=shunno %>
+          </tr>
+          <% }) %>
+          <tr>
+            <td colspan="3">মোটঃ সকল সেন্টারের তথ্য</td>
+            <td><%= subpod %></td>
+            <td><%= subworking %></td>
+            <td><%= subshunno %></td>
+
+
+          </tr>
+
+        </tbody>
+      </table>
+      <% }else{ %>
+      <table class="table table-bordered table-striped" id="tblCustomers" cellspacing="0" cellpadding="0">
+        <thead>
+          <tr>
+            <th>পদের নাম</th>
+            <th>গ্রেড</th>
+            <th>মঞ্জুরীকৃত পদ</th>
+            <th>কর্মরত</th>
+            <th>শুন্যপদ</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <% podobiLists.forEach(function(row){ %>
+          <tr>
+            <td colspan="10">No data Found</td>
+          </tr>
+          <% }) %>
+        </tbody>
+      </table>
+      <% } %>
     </div>
-</div>
-
+  </div>
 </body>
+
 </html>
