--- a/views/pd/worker/workerNum/pdfAll.ejs
+++ b/views/pd/worker/workerNum/pdfAll.ejs
@@ -37,13 +37,57 @@
     .inline-block-child {
       display: inline-block;
     }
+
+    .header {
+      display: flex;
+      width: 100%;
+    }
+
+    .header>* {
+      width: 33%;
+    }
+
+    .row {
+      display: flex;
+      width: 100%;
+    }
+
+    .row>* {
+      width: 50%;
+    }
   </style>
 </head>
 
 <body>
-
   <div style="margin-top: 5px; padding-top: 5px; padding-bottom: 5px; background-color: #ffffffa6;" class="center">
     <div>
+      <div class="header">
+        <div>
+          <img src="/images/dae.jpg" width="100" alt="dae">
+        </div>
+        <div class="flex-container">
+          <h5>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h5>
+          <h5>কৃষি সম্প্রসারণ অধিদপ্তর</h5>
+          <h5>হর্টিকালচার উইং</h5>
+        </div>
+        <div>
+          <img src="/images/bd.png" width="100" alt="bd">
+        </div>
+      </div>
+      <div>
+        <p><b>সেন্টারের নাম :</b><%= centerName %></p>
+      </div>
+      <div style="
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+          ">
+        <p>স্মারক নংঃ</p>
+        <div>
+          <p><b> তারিখ : </b><%= moment(selectedDate).locale("bn").format("MM/YYYY") %></p>
+        </div>
+      </div>
       <h1>শ্রমিকের সংখ্যা</h1>
       <p><b>সেন্টার :</b>সকল সেন্টারের তথ্য</p>
 
@@ -119,7 +163,6 @@
       <% } %>
     </div>
   </div>
-
 </body>
 
 </html>
